--- a/client/webserver/site/src/css/bootstrap.scss
+++ b/client/webserver/site/src/css/bootstrap.scss
@@ -191,6 +191,12 @@ $utilities: (
       0: 0,
     )
   ),
+  "border-style": (
+    property: border-style,
+    values: (
+      dashed: dashed
+    )
+  ),
   "width": (
     property: width,
     class: w,
