--- a/client/webserver/site/src/css/colors.scss
+++ b/client/webserver/site/src/css/colors.scss
@@ -36,7 +36,7 @@ body:not(.dark) {
   --btn-go-color: #fff;
 
   // forms
-  --forms-bg: #fafafae4;
+  --forms-bg: #fafafa99;
   --form-input-bg: #fff;
   --form-input-border: #999;
   --form-input-border-focus: #555;
@@ -62,7 +62,7 @@ body:not(.dark) {
   --loader-bg: #e0e0e077;
 
   // logo
-  --logo-path: url("/img/softened-icon.png");
+  --dex-url: url("/img/softened-icon.png");
 }
 
 
@@ -102,7 +102,7 @@ body.dark {
   --btn-go-color: #fff;
 
   // forms
-  --forms-bg: #05141fe4;
+  --forms-bg: #05141f99;
   --form-input-bg: black;
   --form-input-border: #555;
   --form-input-border-focus: #999;
@@ -128,9 +128,26 @@ body.dark {
   --loader-bg: #13202b77;
 
   // logo
-  --logo-path: url("/img/softened-icon-dark.png");
+  --dex-url: url("/img/softened-icon-dark.png");
+}
+
+.greyscale {
+  filter: grayscale(1);
+}
+
+.blurry-bg {
+  -webkit-backdrop-filter: blur(4px);
+  backdrop-filter: blur(4px);
 }
 
 .body-bg {
   background-color: var(--body-bg);
+}
+
+.section-bg {
+  background-color: var(--section-bg);
+}
+
+.text-good {
+  color: var(--indicator-good);
 }
