--- a/client/webserver/site/src/css/typography.scss
+++ b/client/webserver/site/src/css/typography.scss
@@ -83,12 +83,24 @@ $mono: "mono", monospace;
   font-size: 24px;
 }
 
+.fs26 {
+  font-size: 24px;
+}
+
 .fs28 {
   font-size: 28px;
 }
 
+.fs32 {
+  font-size: 32px;
+}
+
 .fs35 {
   font-size: 35px;
+}
+
+.fs50 {
+  font-size: 50px;
 }
 
 .demi {
