--- a/client/webserver/site/src/css/wallets.scss
+++ b/client/webserver/site/src/css/wallets.scss
@@ -58,7 +58,7 @@
 
         img[data-tmpl=parentImg] {
           border: 3px solid var(--body-bg);
-          background-color: var(--section-ody-bg);
+          background-color: var(--section-bg);
         }
       }
     }
