--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -38,6 +38,8 @@
 
     <a href="/markets" class="demi hoverbg d-hide" id="marketsMenuEntry">[[[Trade]]]</a>
 
+    <a href="/mm" class="ico-robot lh1 fs32 hoverbg d-hide" id="mmLink"></a>
+
     <div class="d-inline-block position-relative pointer hoverbg{{if not $authed}} d-hide{{end}}" id="noteBell">
       <span class="ico-bell fs20 p-2"></span>
       <div id="noteIndicator" class="d-hide"></div>
@@ -242,7 +244,7 @@
 
     </div>
     <div id="actionsNavigator" class="flex-center mt-2 lh1 fs16 user-select-none">
-      <span id="prevAction" class="p-1 ico-arrowback pointer hoverbg"></span>
+      <span id="prevAction" class="p-1 ico-arrowleft pointer hoverbg"></span>
       <span id="currentAction" class="mx-1"></span>
       <span>/</span>
       <span id="actionCount" class="mx-1"></span>
