--- a/client/webserver/site/src/html/init.tmpl
+++ b/client/webserver/site/src/html/init.tmpl
@@ -37,7 +37,7 @@
 
     {{- /* Quick Config Form */ -}}
     <form id="quickConfigForm" class="d-hide">
-      <h3>[[[Quick Configuration]]]</h3>
+      <h3>[[[Quick Placements]]]</h3>
       <div id="qcChoices">
         <div class="fs18 mb-2">[[[quickconfig_wallet_header]]]</div>
         <div id="qcWalletsBox" class="mb-3">
