--- a/client/webserver/site/src/html/mmlogs.tmpl
+++ b/client/webserver/site/src/html/mmlogs.tmpl
@@ -6,7 +6,9 @@
       <span class="ico-wide-headed-left-arrow fs28"></span>
     </div>
     <div class="flex-center fs24 p-2 flex-grow-1">
-      <span class="px-2">[[[logs_for]]] </span> <img id="baseLogo"><img id="quoteLogo"><span id="baseHeader"></span>-<span id="quoteHeader"></span>  @  <span class="px-2" id="hostHeader"></span>
+      <span class="px-2">[[[logs_for]]] </span> 
+      <img class="mini-icon" data-base-logo><img class="mini-icon" data-quote-logo><span data-base-ticker></span>-<span data-quote-ticker></span>
+       @  <span class="px-2" data-host></span>
     </div>
   </div>
   <div class="px-5 py-3 w-100">
