--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -984,7 +984,7 @@
         </tbody>
       </table>
       <div id="ticketHistoryPagination" class="d-flex justify-content-end align-items-center fs18">
-        <span id="ticketHistoryPrevPage" class="ico-arrowback me-1 p-1 hoverbg pointer"></span>
+        <span id="ticketHistoryPrevPage" class="ico-arrowleft me-1 p-1 hoverbg pointer"></span>
         <span id="ticketHistoryPage" class="me-1"></span>
         <span id="ticketHistoryNextPage" class="ico-arrowright p-1 hoverbg pointer"></span>
       </div>
