ui: fee info and best unit functions (#2762)
* show fee info

* choose best units and allow unit selection

--- a/client/webserver/site/src/css/main.scss
+++ b/client/webserver/site/src/css/main.scss
@@ -147,6 +147,22 @@ z-index: 1000;
   }
 }
 
+[data-unit] {
+  color: var(--hint-color);
+}
+
+[data-unit-box] {
+  cursor: default;
+  position: relative;
+  overflow: visible;
+
+  & > div { // unit choice menu
+    left: -2rem;
+    z-index: 10;
+    color: var(--text-color);
+  }
+}
+
 #profileBox,
 #noteBox {
   position: fixed;
