--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -269,13 +269,13 @@
               </div>
 
               {{- /* MM RUNNING */ -}}
-              <div class="d-hide fs15 p-2 flex-stretch-column border-bottom" id="mmRunning">
-                <div class="flex-center mt-2">
+              <div class="d-hide fs15 flex-stretch-column border-bottom" id="mmRunning">
+                <div class="flex-center my-2">
                   <span class="ico-robot fs35 me-2 text-buycolor"></span>
                   <span class="flex-center fs22">[[[market_making_running]]]</span>
                 </div>
                 {{template "runningBotDisplay"}}
-                <span class="fs14 grey mt-3 pt-2 border-top">[[[cannot_manually_trade]]]</span>
+                <span class="fs14 grey mt-2 p-2 border-top">[[[cannot_manually_trade]]]</span>
               </div>
 
               {{- /* ORDER FORM */ -}}
