--- a/client/webserver/site/src/html/mm.tmpl
+++ b/client/webserver/site/src/html/mm.tmpl
@@ -392,7 +392,7 @@
 
                 {{- /* PLACEMENTS */ -}}
                 <div data-tmpl="placementDataBox" class="d-flex align-items-stretch border-top mt-2">
-                  <div class="d-flex flex-column px-3 py-2">
+                  <div class="flex-center flex-column px-3 py-2">
                     <div class="flex-center pb-1 pt-1 lh1">
                       <span data-tmpl="buyPlacementCount" class="demi text-buycolor fs18 me-1"></span>
                       <span class="fs16">buy placements</span>
