fix some ui bugs. add a little display

--- a/client/webserver/site/src/css/main.scss
+++ b/client/webserver/site/src/css/main.scss
@@ -107,6 +107,10 @@ img.dex-logo {
   content: var(--dex-url);
 }
 
+img.bison-logo-square {
+  content: url("/img/bison-square_50.png");
+}
+
 #noteIndicator {
   position: absolute;
   top: 0;
