--- a/client/webserver/site/src/html/mmsettings.tmpl
+++ b/client/webserver/site/src/html/mmsettings.tmpl
@@ -605,7 +605,7 @@
                     <div data-tmpl="balanceBreakdown">
                       <div class="d-flex align-items-center">
                         <span class="fs16 lh1">├─</span>
-                        <img src="/img/bison-square_50.png" class="micro-icon mx-1">
+                        <img class="bison-logo-square micro-icon mx-1">
                         <span data-tmpl="dexAvail" class="fs14"></span>
                       </div>
                       <div class="d-flex align-items-center fs14">
